--- a/evs_service/android.automotive.evs.vehicle_state.rc
+++ b/evs_service/android.automotive.evs.vehicle_state.rc
@@ -1,4 +1,4 @@
-service evs_can_service /vendor/bin/evs_can_service
+service evs_service /vendor/bin/evs_service
     class late_start
     user automotive_evs
     group automotive_evs
