MA-17909 declare the HIDL service provided by oemlock HAL
Android11 GSI image needs to use the service provided by oemlock HAL.

With trusty OS image, oemlock HAL service is started in init.rc. Without
trusty OS image, oemlock HAL is not started in init.rc.

Declare the HIDL service provided by oemlock HAL with "interface" so
this HAL service can be started with hwservicemanager.

Signed-off-by: faqiang.zhu <faqiang.zhu@nxp.com>
Change-Id: Ie55aa33fe47f57ad765dd82e0ac7dff9873c9a80
Reviewed-on: http://androidsource.ap.freescale.net/project/13594
Reviewed-by: Wang Haoran <elven.wang@nxp.com>

--- a/oemlock/android.hardware.oemlock@1.0-service.imx.rc
+++ b/oemlock/android.hardware.oemlock@1.0-service.imx.rc
@@ -1,3 +1,4 @@
 service vendor.oemlock-1-0 /vendor/bin/hw/android.hardware.oemlock@1.0-service.imx
+    interface android.hardware.oemlock@1.0::IOemLock default
     user system
     group system
