--- a/usb/android.hardware.usb@1.3-service.imx.rc
+++ b/usb/android.hardware.usb@1.3-service.imx.rc
@@ -1,4 +1,4 @@
-service usb-hal-1-1 /vendor/bin/hw/android.hardware.usb@1.1-service.imx
+service vendor.usb-hal-1-3 /vendor/bin/hw/android.hardware.usb@1.3-service.imx
     class hal
     user root
     group root system shell mtp
