MA-21758-2 Add hdmi cec support for imx devices
Add implementation for imx devices based on the aosp default aidl,
aidl splits message transmitting and hdmi hot-plug detection
into 2 services and implements them based on FIFOs;
imx only supports 1 file descriptor implemented using
ioctl operations; so made an adaptatoon here.
The physical address is related to the TV HDMI connector,
for the platform whose initial physical address get is invalid,
temporarily fixed to HDMI1.

Change-Id: I8ac200e9a4316212c77eb720a606b9d1c2c2c7c1
Signed-off-by: Anle Pan <anle.pan@nxp.com>
Reviewed-on: http://androidsource.nxp.com/project/22963
Reviewed-by: Xuegang Liu <xuegang.liu@nxp.com>
Reviewed-by: Bo Zhang <bo.zhang@nxp.com>

--- a/hdmicec/android.hardware.tv.hdmi.cec-service.imx.rc
+++ b/hdmicec/android.hardware.tv.hdmi.cec-service.imx.rc
@@ -1,4 +1,4 @@
-service vendor.cec-default /vendor/bin/hw/android.hardware.tv.hdmi.cec-service
+service vendor.cec-default /vendor/bin/hw/android.hardware.tv.hdmi.cec-service.imx
     interface aidl android.hardware.tv.hdmi.cec.IHdmiCec/default
     class hal
     user system
