--- a/hdmiconnection/android.hardware.tv.hdmi.connection-service.imx.rc
+++ b/hdmiconnection/android.hardware.tv.hdmi.connection-service.imx.rc
@@ -1,4 +1,4 @@
-service vendor.hdmi-default /vendor/bin/hw/android.hardware.tv.hdmi.connection-service
+service vendor.hdmi-default /vendor/bin/hw/android.hardware.tv.hdmi.connection-service.imx
     interface aidl android.hardware.tv.hdmi.connection.IHdmiConnection/default
     class hal
     user system
